# Merge-InsertionSortAnalysis

./: README.md
A2i/: CMakeLists.txt  main.cpp
A2i/utils/: ArrayGenerator.cpp  ArrayGenerator.h  MergeSort.cpp  MergeSort.h  SortTester.cpp  SortTester.h
vizualizer/: pyproject.toml
vizualizer/assets/: almost_sorted_merge_sort.json  almost_sorted_optimized.json  random_array_merge_sort.json  random_array_optimized.json  reversed_merge_sort.json  reversed_optimized.json
vizualizer/vizualizer/: almost_sorted.py  random_array.py  reversed_sorted.py
